--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <h1 id="rndNum">=)</h1>
 
     <script src="./js/main.js"></script>
 </body>
